--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -1,4 +1,4 @@
-@import 'core/stylesV2/constants/index';
+@import '../styles/constants/index';
 
 @mixin focused {
   border-color: $colorPrimaryLight;
