--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   cursor: pointer;
   border: none;
-  font-weight: $fontWeightBold;
+  font-weight: $fontWeightNormal;
   font-family: $fontFamily;
   color: $colorNeutralWhite;
 
@@ -24,7 +24,7 @@
 
   &.normal {
     border-radius: $borderRadiusMedium;
-    font-size: $fontSizeBodyNormal;
+    font-size: $fontSizeButton;
     min-height: $grid * 8;
     padding: 0 $grid * 3;
 
