--- a/packages/ui/styles/constants/index.scss
+++ b/packages/ui/styles/constants/index.scss
@@ -1,3 +1,7 @@
 @import './colors.scss';
 @import './sizes.scss';
 @import './typography.scss';
+
+// TODO: Update once Pawel finishes it
+// $outline: $colorAccessibilityOutline solid $outlineWidth;
+$outline: none;
