--- a/packages/ui/styles/global.scss
+++ b/packages/ui/styles/global.scss
@@ -7,7 +7,10 @@ html {
   /* doiuse-enable calc */
   overflow-x: auto;
   font-family: $fontFamily, sans-serif;
-  color: $colorBodyPrimary;
+  font-weight: $fontWeightRegular;
+  color: $colorText;
+
+  @include typographyBodyNormal;
 }
 
 body {
