--- a/packages/ui/styles/constants/colors.scss
+++ b/packages/ui/styles/constants/colors.scss
@@ -41,6 +41,7 @@ $colorHeading: #353d49;
 $colorBodyPrimary: #353d49;
 $colorBodySecondary: #6d7480;
 $colorTooltipText: #fff;
+$colorOutline: #9953df;
 
 :export {
   colorPrimaryLighter: $colorPrimaryLighter;
@@ -78,4 +79,5 @@ $colorTooltipText: #fff;
   colorBodyPrimary: $colorBodyPrimary;
   colorBodySecondary: $colorBodySecondary;
   colorTooltipText: $colorTooltipText;
+  colorOutline: $colorOutline;
 }
