--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -37,9 +37,9 @@ $inputHeight: $grid * 10;
   .inputIcon {
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
     // $grid * 9 / 2 is half of the padding. We need to shift it to the left just a bit to account for the border width
-    left: calc(#{$grid * 9 / 2} + #{$outlineWidth});
+    transform: translate(-50%, -50%) translateX($outlineWidth);
+    left: $grid * 9 / 2;
   }
 
   input {
