--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -6,6 +6,7 @@
 }
 
 $inputHeight: $grid * 10;
+$paddingLeftWithIcon: $grid * 8;
 
 .container {
   @include typographyBodyNormal;
@@ -39,7 +40,7 @@ $inputHeight: $grid * 10;
     top: 50%;
     // $grid * 9 / 2 is half of the padding. We need to shift it to the left just a bit to account for the border width
     transform: translate(-50%, -50%) translateX($outlineWidth);
-    left: $grid * 9 / 2;
+    left: $paddingLeftWithIcon / 2;
   }
 
   input {
@@ -66,7 +67,7 @@ $inputHeight: $grid * 10;
 
   &.withIcon {
     input {
-      padding-left: $grid * 9;
+      padding-left: $paddingLeftWithIcon;
     }
   }
 
