--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -1,9 +1,5 @@
 @import '../styles/constants/index';
-
-@mixin inputFocus {
-  border-color: $colorAccessibilityOutline;
-  box-shadow: inset 0 0 0 $outlineWidth $colorAccessibilityOutline;
-}
+@import '../styles/a11y.scss';
 
 $inputHeight: $grid * 10;
 $paddingLeftWithIcon: $grid * 8;
@@ -58,7 +54,6 @@ $paddingLeftWithIcon: $grid * 8;
     height: $inputHeight;
     border-radius: $borderRadius;
     background-color: $colorNeutralLighter;
-    outline: none;
 
     &::placeholder {
       color: $colorTextSecondary;
@@ -112,11 +107,11 @@ $paddingLeftWithIcon: $grid * 8;
   // :focus-within is not supported by IE11
   // This way in IE11 the color of .inputIcon will not change, but it is an acceptable degradation
   input:focus {
-    @include inputFocus;
+    @include outlineFormField;
   }
   &.focus {
     input {
-      @include inputFocus;
+      @include outlineFormField;
     }
   }
 }
