--- a/packages/ui/src/TextField.module.scss
+++ b/packages/ui/src/TextField.module.scss
@@ -1,9 +1,5 @@
 @import '../styles/constants/index';
-
-@mixin inputFocus {
-  border-color: $colorPrimary;
-  border-width: $outlineWidth;
-}
+@import '../styles/a11y.scss';
 
 $inputHeight: $grid * 10;
 $paddingLeftWithIcon: $grid * 8;
@@ -58,7 +54,6 @@ $paddingLeftWithIcon: $grid * 8;
     height: $inputHeight;
     border-radius: $borderRadius;
     background-color: $colorNeutralLighter;
-    outline: none;
 
     &::placeholder {
       color: $colorTextSecondary;
@@ -75,7 +70,24 @@ $paddingLeftWithIcon: $grid * 8;
     color: $colorTextSecondary;
   }
 
-  &.disabled {
+  &:hover,
+  &.hover {
+    input {
+      border-color: $colorPrimary;
+    }
+    .inputIcon {
+      color: $colorPrimary;
+    }
+  }
+
+  &:focus-within,
+  &.focus {
+    .inputIcon {
+      color: $colorPrimary;
+    }
+  }
+
+  &.readOnly {
     input {
       color: $colorTextSecondary;
       background-color: $colorNeutral;
@@ -92,32 +104,14 @@ $paddingLeftWithIcon: $grid * 8;
     }
   }
 
-  &:not(.disabled) {
-    &:hover,
-    &.hover {
-      input {
-        border-color: $colorPrimary;
-      }
-      .inputIcon {
-        color: $colorPrimary;
-      }
-    }
-
-    &:focus-within,
-    &.focus {
-      .inputIcon {
-        color: $colorPrimary;
-      }
-    }
-    // :focus-within is not supported by IE11
-    // This way in IE11 the color of .inputIcon will not change, but it is an acceptable degradation
-    input:focus {
-      @include inputFocus;
-    }
-    &.focus {
-      input {
-        @include inputFocus;
-      }
+  // :focus-within is not supported by IE11
+  // This way in IE11 the color of .inputIcon will not change, but it is an acceptable degradation
+  input:focus {
+    @include outlineFormField;
+  }
+  &.focus {
+    input {
+      @include outlineFormField;
     }
   }
 }
