--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/constants/index';
+@import '../styles/a11y.scss';
 
 .button {
   display: flex;
@@ -19,8 +20,7 @@
 
   &:focus,
   &.focus {
-    outline: $colorAccessibilityOutline ($grid / 2) auto;
-    outline-offset: $grid / 2;
+    @include outline;
   }
 
   &:disabled {
