feat: add letter-spacing

--- a/packages/ui/src/Button.module.scss
+++ b/packages/ui/src/Button.module.scss
@@ -12,6 +12,7 @@
   font-weight: $fontWeightRegular;
   font-family: $fontFamily;
   color: $colorNeutralWhite;
+  letter-spacing: $letterSpacingButton;
   // Size
   border-radius: $borderRadius;
   font-size: $fontSizeButton;
